# opencv-stubs

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint-markdown.yaml  lint-python.yaml  lint-spelling.yaml  lint-yaml.yaml  pre-commit.yaml  publish.yaml  release.yaml
docs/: release_checklist.md
requirements/: requirements-build.txt  requirements-dev.txt  requirements.txt
src/cv2-stubs/: __init__.pyi  _stubs_utils.pyi  classes.pyi  constants.pyi  functions.pyi
src/cv2-stubs/modules/: __init__.py  aruco.pyi  barcode.pyi  bgsegm.pyi  bioinspired.pyi  ccm.pyi  colored_kinfu.pyi  cuda.pyi  data.pyi  datasets.pyi  detail.pyi  dnn.pyi  dnn_superres.pyi  dpm.pyi  dynafu.pyi  error.pyi  face.pyi  fisheye.pyi  flann.pyi  ft.pyi  hfs.pyi  img_hash.pyi  intensity_transform.pyi  ipp.pyi  large_kinfu.pyi  legacy.pyi  line_descriptor.pyi  linemod.pyi  load_config_py3.pyi  mat_wrapper.pyi  mcc.pyi  ml.pyi  motempl.pyi  multicalib.pyi  ocl.pyi  ogl.pyi  omnidir.pyi  optflow.pyi  parallel.pyi  phase_unwrapping.pyi  (+18 more)
src/cv2-stubs/modules/cuda/: GpuMat.pyi  __init__.pyi
src/cv2-stubs/modules/gapi/: __init__.pyi  ie.pyi  oak.pyi  onnx.pyi  streaming.pyi  video.pyi  wip.pyi
src/cv2-stubs/modules/gapi/streaming/: __init__.pyi
src/cv2-stubs/modules/gapi/wip/: __init__.pyi  draw.pyi  gst.pyi
src/cv2-stubs/modules/kinfu/: __init__.pyi  detail.pyi
src/cv2-stubs/modules/misc/: __init__.pyi  version.pyi
src/cv2-stubs/modules/utils/: __init__.pyi  fs.pyi  nested.pyi
src/cv2-stubs/modules/utils/nested/: __init__.pyi  export_class_name.pyi
src/cv2-stubs/modules/ximgproc/: __init__.pyi  segmentation.pyi
utils/: add_missing_overloads.py  generate_classes.py  generate_constants.py  generate_modules.py  merge_with_microsoft_stubs.py  processing_utils.py  sed_commands.py  undefined_to_any.py
